Doc content is now published in /js dir + link to cheatsheets from js doc instead of nothing

--- a/src/main/asciidoc/cheatsheet/DeliveryOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/DeliveryOptions.adoc
@@ -6,15 +6,16 @@
  Delivery options allow to configure delivery timeout and message codec name, and to provide any headers
  that you wish to send with the message.
 ++++
+'''
 
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
 |===
-|Name | Type | Description
+^|Name | Type ^| Description
 
-|sendTimeout
-|Number
-| Set the send timeout.
-
-|codecName
-|String
-| Set the codec name.
-|===
+|`sendTimeout`
+|`Number`
+|_Set the send timeout._
+|`codecName`
+|`String`
+|_Set the codec name._|===
