--- a/src/main/asciidoc/cheatsheet/TrustOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/TrustOptions.adoc
@@ -3,7 +3,10 @@
 ++++
  Certification authority configuration options.
 ++++
+'''
 
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
 |===
-|Name | Type | Description
+^|Name | Type ^| Description
 |===
