--- a/src/main/asciidoc/js/datagrams.adoc
+++ b/src/main/asciidoc/js/datagrams.adoc
@@ -56,11 +56,11 @@ var socket = vertx.createDatagramSocket({
 var buffer = Buffer.buffer("content");
 // Send a Buffer
 socket.send(buffer, 1234, "10.0.0.1", function (asyncResult, asyncResult_err) {
-  console.log("Send succeeded? " + (asyncResult != null));
+  console.log("Send succeeded? " + asyncResult_err == null);
 });
 // Send a String
 socket.send("A string used as content", 1234, "10.0.0.1", function (asyncResult, asyncResult_err) {
-  console.log("Send succeeded? " + (asyncResult != null));
+  console.log("Send succeeded? " + asyncResult_err == null);
 });
 
 ----
@@ -87,7 +87,7 @@ So to listen on a specific address and port you would do something like shown he
 var socket = vertx.createDatagramSocket({
 });
 socket.listen(1234, "0.0.0.0", function (asyncResult, asyncResult_err) {
-  if ((asyncResult != null)) {
+  if (asyncResult_err == null) {
     socket.handler(function (packet) {
       // Do something with the packet
     });
@@ -126,7 +126,7 @@ var socket = vertx.createDatagramSocket({
 var buffer = Buffer.buffer("content");
 // Send a Buffer to a multicast address
 socket.send(buffer, 1234, "230.0.0.1", function (asyncResult, asyncResult_err) {
-  console.log("Send succeeded? " + (asyncResult != null));
+  console.log("Send succeeded? " + asyncResult_err == null);
 });
 
 ----
@@ -156,14 +156,14 @@ would do something like shown here:
 var socket = vertx.createDatagramSocket({
 });
 socket.listen(1234, "0.0.0.0", function (asyncResult, asyncResult_err) {
-  if ((asyncResult != null)) {
+  if (asyncResult_err == null) {
     socket.handler(function (packet) {
       // Do something with the packet
     });
 
     // join the multicast group
     socket.listenMulticastGroup("230.0.0.1", function (asyncResult2, asyncResult2_err) {
-      console.log("Listen succeeded? " + (asyncResult2 != null));
+      console.log("Listen succeeded? " + asyncResult2_err == null);
     });
   } else {
     console.log("Listen failed" + asyncResult_err);
@@ -185,20 +185,20 @@ This is shown here:
 var socket = vertx.createDatagramSocket({
 });
 socket.listen(1234, "0.0.0.0", function (asyncResult, asyncResult_err) {
-  if ((asyncResult != null)) {
+  if (asyncResult_err == null) {
     socket.handler(function (packet) {
       // Do something with the packet
     });
 
     // join the multicast group
     socket.listenMulticastGroup("230.0.0.1", function (asyncResult2, asyncResult2_err) {
-      if ((asyncResult2 != null)) {
+      if (asyncResult2_err == null) {
         // will now receive packets for group
 
         // do some work
 
         socket.unlistenMulticastGroup("230.0.0.1", function (asyncResult3, asyncResult3_err) {
-          console.log("Unlisten succeeded? " + (asyncResult3 != null));
+          console.log("Unlisten succeeded? " + asyncResult3_err == null);
         });
       } else {
         console.log("Listen failed" + asyncResult2_err);
@@ -232,7 +232,7 @@ var socket = vertx.createDatagramSocket({
 
 // This would block packets which are send from 10.0.0.2
 socket.blockMulticastGroup("230.0.0.1", "10.0.0.2", function (asyncResult, asyncResult_err) {
-  console.log("block succeeded? " + (asyncResult != null));
+  console.log("block succeeded? " + asyncResult_err == null);
 });
 
 ----
@@ -240,20 +240,20 @@ socket.blockMulticastGroup("230.0.0.1", "10.0.0.2", function (asyncResult, async
 ==== DatagramSocket properties
 
 When creating a `link:jsdoc/datagram_socket-DatagramSocket.html[DatagramSocket]` there are multiple properties you can set to
-change it's behaviour with the `link:dataobject/DatagramSocketOptions.html[DatagramSocketOptions]` object. Those are listed here:
+change it's behaviour with the `link:../cheatsheet/DatagramSocketOptions.html[DatagramSocketOptions]` object. Those are listed here:
 
-- `link:dataobject/DatagramSocketOptions.html#setSendBufferSize[setSendBufferSize]` Sets the send buffer size in bytes.
-- `link:dataobject/DatagramSocketOptions.html#setReceiveBufferSize[setReceiveBufferSize]` Sets the TCP receive buffer size
+- `link:../cheatsheet/DatagramSocketOptions.html#setSendBufferSize[setSendBufferSize]` Sets the send buffer size in bytes.
+- `link:../cheatsheet/DatagramSocketOptions.html#setReceiveBufferSize[setReceiveBufferSize]` Sets the TCP receive buffer size
 in bytes.
-- `link:dataobject/DatagramSocketOptions.html#setReuseAddress[setReuseAddress]` If true then addresses in TIME_WAIT
+- `link:../cheatsheet/DatagramSocketOptions.html#setReuseAddress[setReuseAddress]` If true then addresses in TIME_WAIT
 state can be reused after they have been closed.
-- `link:dataobject/DatagramSocketOptions.html#setTrafficClass[setTrafficClass]`
-- `link:dataobject/DatagramSocketOptions.html#setBroadcast[setBroadcast]` Sets or clears the SO_BROADCAST socket
+- `link:../cheatsheet/DatagramSocketOptions.html#setTrafficClass[setTrafficClass]`
+- `link:../cheatsheet/DatagramSocketOptions.html#setBroadcast[setBroadcast]` Sets or clears the SO_BROADCAST socket
 option. When this option is set, Datagram (UDP) packets may be sent to a local interface's broadcast address.
-- `link:dataobject/DatagramSocketOptions.html#setMulticastNetworkInterface[setMulticastNetworkInterface]` Sets or clears
+- `link:../cheatsheet/DatagramSocketOptions.html#setMulticastNetworkInterface[setMulticastNetworkInterface]` Sets or clears
 the IP_MULTICAST_LOOP socket option. When this option is set, multicast packets will also be received on the
 local interface.
-- `link:dataobject/DatagramSocketOptions.html#setMulticastTimeToLive[setMulticastTimeToLive]` Sets the IP_MULTICAST_TTL socket
+- `link:../cheatsheet/DatagramSocketOptions.html#setMulticastTimeToLive[setMulticastTimeToLive]` Sets the IP_MULTICAST_TTL socket
 option. TTL stands for "Time to Live," but in this context it specifies the number of IP hops that a packet is
 allowed to go through, specifically for multicast traffic. Each router or gateway that forwards a packet decrements
 the TTL. If the TTL is decremented to 0 by a router, it will not be forwarded.
