--- a/src/main/asciidoc/js/dns.adoc
+++ b/src/main/asciidoc/js/dns.adoc
@@ -28,7 +28,7 @@ To lookup the A / AAAA record for "vertx.io" you would typically use it like:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.lookup("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     console.log(ar);
   } else {
     console.log("Failed to resolve entry" + ar_err);
@@ -48,7 +48,7 @@ To lookup the A record for "vertx.io" you would typically use it like:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.lookup4("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     console.log(ar);
   } else {
     console.log("Failed to resolve entry" + ar_err);
@@ -68,7 +68,7 @@ To lookup the A record for "vertx.io" you would typically use it like:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.lookup6("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     console.log(ar);
   } else {
     console.log("Failed to resolve entry" + ar_err);
@@ -88,7 +88,7 @@ To lookup all the A records for "vertx.io" you would typically do:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveA("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -111,7 +111,7 @@ To lookup all the AAAAA records for "vertx.io" you would typically do:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveAAAA("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -134,7 +134,7 @@ To lookup all the CNAME records for "vertx.io" you would typically do:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveCNAME("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -157,7 +157,7 @@ To lookup all the MX records for "vertx.io" you would typically do:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveMX("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -189,7 +189,7 @@ To resolve all the TXT records for "vertx.io" you could use something along thes
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveTXT("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -212,7 +212,7 @@ To resolve all the NS records for "vertx.io" you could use something along these
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveNS("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -235,7 +235,7 @@ To lookup all the SRV records for "vertx.io" you would typically do:
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolveSRV("vertx.io", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var records = ar;
     Array.prototype.forEach.call(records, function(record) {
       console.log(record);
@@ -269,7 +269,7 @@ To resolve the PTR record for the ipaddress 10.0.0.1 you would use the PTR notio
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.resolvePTR("1.0.0.10.in-addr.arpa", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var record = ar;
     console.log(record);
   } else {
@@ -290,7 +290,7 @@ To do a reverse lookup for the ipaddress 10.0.0.1 do something similar like this
 ----
 var client = vertx.createDnsClient(53, "10.0.0.1");
 client.reverseLookup("10.0.0.1", function (ar, ar_err) {
-  if ((ar != null)) {
+  if (ar_err == null) {
     var record = ar;
     console.log(record);
   } else {
