--- a/src/main/asciidoc/js/shareddata.adoc
+++ b/src/main/asciidoc/js/shareddata.adoc
@@ -65,7 +65,7 @@ Getting the map is asynchronous and the result is returned to you in the handler
 var sd = vertx.sharedData();
 
 sd.getClusterWideMap("mymap", function (res, res_err) {
-  if ((res != null)) {
+  if (res_err == null) {
     var map = res;
   } else {
     // Something went wrong!
@@ -85,7 +85,7 @@ The actual put is asynchronous and the handler is notified once it is complete:
 ----
 
 map.put("foo", "bar", function (resPut, resPut_err) {
-  if ((resPut != null)) {
+  if (resPut_err == null) {
     // Successfully put the value
   } else {
     // Something went wrong!
@@ -105,7 +105,7 @@ The actual get is asynchronous and the handler is notified with the result some 
 ----
 
 map.get("foo", function (resGet, resGet_err) {
-  if ((resGet != null)) {
+  if (resGet_err == null) {
     // Successfully got the value
     var val = resGet;
   } else {
@@ -143,7 +143,7 @@ another caller can obtain it.
 [source,js]
 ----
 sd.getLock("mylock", function (res, res_err) {
-  if ((res != null)) {
+  if (res_err == null) {
     // Got the lock!
     var lock = res;
 
@@ -165,7 +165,7 @@ with a failure:
 [source,js]
 ----
 sd.getLockWithTimeout("mylock", 10000, function (res, res_err) {
-  if ((res != null)) {
+  if (res_err == null) {
     // Got the lock!
     var lock = res;
 
@@ -187,7 +187,7 @@ You obtain an instance with `link:jsdoc/shared_data-SharedData.html#getCounter[g
 [source,js]
 ----
 sd.getCounter("mycounter", function (res, res_err) {
-  if ((res != null)) {
+  if (res_err == null) {
     var counter = res;
   } else {
     // Something went wrong!
