--- a/src/main/asciidoc/cheatsheet/OpenOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/OpenOptions.adoc
@@ -12,31 +12,51 @@
 
 |`perms`
 |`String`
-|_Set the permissions string_
+|+++
+Set the permissions string+++
+
 |`read`
 |`Boolean`
-|_Set whether the file is to be opened for reading_
+|+++
+Set whether the file is to be opened for reading+++
+
 |`write`
 |`Boolean`
-|_Set whether the file is to be opened for writing_
+|+++
+Set whether the file is to be opened for writing+++
+
 |`create`
 |`Boolean`
-|_Set whether the file should be created if it does not already exist._
+|+++
+Set whether the file should be created if it does not already exist.+++
+
 |`createNew`
 |`Boolean`
-|_Set whether the file should be created and fail if it does exist already._
+|+++
+Set whether the file should be created and fail if it does exist already.+++
+
 |`deleteOnClose`
 |`Boolean`
-|_Set whether the file should be deleted when it's closed, or the JVM is shutdown._
+|+++
+Set whether the file should be deleted when it's closed, or the JVM is shutdown.+++
+
 |`truncateExisting`
 |`Boolean`
-|_Set whether the file should be truncated to zero length on opening if it exists and is opened for write_
+|+++
+Set whether the file should be truncated to zero length on opening if it exists and is opened for write+++
+
 |`sparse`
 |`Boolean`
-|_Set whether a hint should be provided that the file to created is sparse_
+|+++
+Set whether a hint should be provided that the file to created is sparse+++
+
 |`sync`
 |`Boolean`
-|_Set whether every write to the file's content and meta-data will be written synchronously to the underlying hardware._
+|+++
+Set whether every write to the file's content and meta-data will be written synchronously to the underlying hardware.+++
+
 |`dSync`
 |`Boolean`
-|_Set whether every write to the file's content  ill be written synchronously to the underlying hardware._|===
+|+++
+Set whether every write to the file's content  ill be written synchronously to the underlying hardware.+++
+|===
